crates/wac-parser/tests/resolution/fail/duplicate-export.wac
package test:comp;

import foo: func();

export foo as "foo";
export foo as foo;
